--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.0",
     "resend": "3.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "twilio": "^5.2.0"
