--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.0.3",
@@ -34,11 +34,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.12.2",
+    "date-fns": "^4.1.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.0",
     "react-colorful": "^5.6.1",
+    "react-day-picker": "^9.9.0",
     "react-dom": "^18.3.0",
     "resend": "3.2.0",
     "sonner": "^2.0.7",
