--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
     "@edge-runtime/vm": "^3.2.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
